# invariant_causal_prediction

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
docs/: api.rst  conf.py  index.rst  usage.rst
invariant_causal_prediction/: __init__.py  hidden_icp.py  icp.py  sklearn.py  summary.py  viz.py
invariant_causal_prediction/tests/: test_parity_with_r.py  test_smoke.py
