[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "invariant-causal-prediction"
version = "0.1.0"
description = "Invariant Causal Prediction (ICP) for Python: identify invariant causal predictors across environments and compute confidence intervals."
readme = "README.md"
authors = [{ name = "Your Name" }]
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.23",
  "scipy>=1.9",
  "scikit-learn>=1.1",
  "pandas>=1.5",
  "statsmodels>=0.14",
  "matplotlib>=3.7",
]

[project.urls]
Homepage = "https://example.com/invariant-causal-prediction"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["invariant_causal_prediction*"] 